@@ -1,0 +1,9 @@
+Title: Rule editor: Fixed wrong default value for yes/no rulesets
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.4.0i4
+Date: 1486111533
+Class: fix
+
+
